# State

./: .gitignore
statements/: pyproject.toml  requirements.txt  tex-requirements.txt
statements/statements/: app.py  bootstrap.py  consts.py
statements/statements/adapters/latex/: aspect.py  color.py  settings.py  statement.py
statements/statements/domain/: day.py  issue.py  progress_status.py  project_status_change.py  proposal.py  statement.py  validation_types.py
statements/statements/domain/events/: event.py
statements/statements/domain/goals/: goal.py  goal_closure.py
statements/statements/domain/habits/: habit.py  habit_maintenance.py
statements/statements/domain/incidents/: context.py  incident.py
statements/statements/domain/long_goals/: goal_closure.py  long_goal.py
statements/statements/domain/outline/: event.py  long_goal.py  outline.py
statements/statements/domain/settings/: aspect.py  scope.py  statement.py  statement_config.py  title_config.py
statements/statements/domain/statements/: base_statement.py  day_statement.py  month_statement.py  season_statement.py  week_statement.py
statements/statements/domain/tasks/: task.py  task_closure.py
statements/statements/domain/vetoes/: veto.py  veto_maintenance.py
statements/statements/entrypoints/: season.py
statements/statements/intermidiaries/display/: validation_types.py
statements/statements/providers/: aspects.py  statement.py  statement_settings.py
statements/statements/resources/: encircle.sty  timeline.sty
statements/statements/use_cases/: statement_maker.py
(+263 files in other folders)
