[tool.poetry]
name = "statements"
version = "0.1.0"
description = "A CLI tool for generating statement PDFs"
authors = ["Atai Ambus <atayambus@gmail.com>"]
include = [
    {path = 'TinyTeX'},
    {path = 'resources'}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.0"
PyLaTeX = "^1.4.1"
mistletoe = "^1.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
docstring-parser = "^0.15"
watchfiles = "^0.19.0"

[tool.poetry.scripts]
state = 'statements.bootstrap:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
